@@ -1,7 +1,0 @@
-!include( ../../../script.plugin.config ){
-  message( "Oops -- No custom build options specified" )
-}
-
-HEADERS += SETTINGS_LOAD.h
-
-SOURCES += SETTINGS_LOAD.cpp
