@@ -1,2 +1,0 @@
-Makefile
-moc_*.cpp
