@@ -187,8 +187,7 @@ SUBDIRS += plugins/script/SCRIPT_PANEL_RUN
 SUBDIRS += plugins/script/SCRIPT_RETURN_DATA
 SUBDIRS += plugins/script/SELECT_DIALOG
 SUBDIRS += plugins/script/SELL
-SUBDIRS += plugins/script/SETTINGS_LOAD
-SUBDIRS += plugins/script/SETTINGS_SAVE
+SUBDIRS += plugins/script/SETTINGS
 SUBDIRS += plugins/script/STDDEV
 SUBDIRS += plugins/script/STOCH_FAST
 SUBDIRS += plugins/script/STOCH_RSI
