@@ -1192,3 +1192,6 @@
 
            Merged all the PLOT_* plugins into PLOT plugin. CVS users please update your
            personal scripts with the METHOD parm.
+
+           Merged all the SETTINGS_* plugins into SETTINGS plugin. CVS users please update your
+           personal scripts with the METHOD parm.
